h-5/15-1-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: nginx
  ports:
    - name: front
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: multitool
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
