h-5/15-1-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.org/rewrites: "serviceName=back-service rewrite=/"
spec:
  ingressClassName: nginx
  rules:
    - host: kuberlab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: back-service
                port:
                  number: 80
